@@ -12,6 +12,10 @@ subroutine profiler docs need update
 add u key to treemap to trigger moving 'up' a level
 add "calls N subs" to treemap mouseover box
 
+=head2 Changes in Devel::NYTProf 4.04
+
+  Trace log messages are now flushed immediately.
+
 =head2 Changes in Devel::NYTProf 4.03 (svn 1316) 19th June 2010
 
   Fixed another nytprofhtml performance problem for profiles with
